--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Todos</string>
+    <string name="add_todo">Add todo</string>
+    <string name="placeholder">placeholder</string>
 </resources>
